<resources>
    <string name="app_name">ECR Aplikacija</string>
    <string name="start_digital_doc_button">Spremi Račun</string>
    <string name="add_text">Add text</string>
    <string name="configuration">Konfiguracija</string>
    <string name="data_about_transaction">Podaci o transakciji:</string>
    <string name="seller_id">ID trgovca</string>
    <string name="store_id">ID trgovine</string>
    <string name="bill_id">ID računa</string>
    <string name="bill_total">Iznos</string>
    <string name="method_of_payment">Način plaćanja</string>
    <string name="snackbar_blank_bill_total">Bill total is blank</string>
    <string name="close">Close</string>
</resources>